<resources>
    <string name="app_name">ZXY</string>
    <string name="zapatillastitulo">Zapatillas ZXY</string>
    <string name="genero">Genero</string>
    <string name="tipozapato">Tipo de Zapato</string>
    <string name="marca">Marca</string>
    <string name="cantidadzapatos">Cantidad</string>
    <string name="comprar">Comprar</string>
    <string name="totalapagar">Total a Pagar</string>
    <string name="zapatilla">Zapatilla</string>
    <string name="clasico">Clasico</string>
    <string name="nike">Nike</string>
    <string name="adidas">Adidas</string>
    <string name="puma">Puma</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string-array name="l_Genero">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string-array name="l_TipoZapato">
        <item>@string/zapatilla</item>
        <item>@string/clasico</item>
    </string-array>
    <string-array name="l_Marca">
        <item>@string/nike</item>
        <item>@string/adidas</item>
        <item>@string/puma</item>
    </string-array>
    <string name="errorvacio">Digite la cantidad de zapatos</string>
    <string name="errornegativo">No ingrese valores negativos</string>
</resources>
